--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,7 +12,7 @@
     
     <style name="WhiteBox">
 
-        <item name="android:background">@android:color/holo_green_light</item>
+        <item name="android:background">@android:color/white</item>
         <item name="android:textAlignment">center</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">@dimen/box_text_size</item>
